trying fix arrows visible

--- a/#source/sass/_slider.scss
+++ b/#source/sass/_slider.scss
@@ -78,6 +78,7 @@ $slick-opacity-not-active: 0.25 !default;
     outline: none;
     opacity: 0.5;
     transition: opacity 0.3s ease;
+    background-color: #a0a0a0;
     &:hover, &:focus {
         outline: none;
         opacity: 1;
